--- a/grafo1/grafo1.vcxproj
+++ b/grafo1/grafo1.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Desktop\graf1hf\hazi.cpp" />
+    <ClCompile Include="hazi.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
